# rules_rust

./: .bazelrc  .pre-commit-config.yaml  .typos.toml  MODULE.bazel  version.bzl
.bazelci/: presubmit.yml
.github/: release_notes.template
.github/workflows/: compile_pyo3_dev_requirements.yaml  formatting.yaml  release.yaml
cargo/: Cargo.toml
cargo/private/: cargo_build_script.bzl
crate_universe/: extensions.bzl
crate_universe/private/: common_utils.bzl  crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl  splicing_utils.bzl
crate_universe/src/: config.rs  rendering.rs  splicing.rs
crate_universe/src/cli/: generate.rs  splice.rs  vendor.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/metadata/: metadata_annotation.rs
crate_universe/src/splicing/: splicer.rs
crate_universe/tests/: cargo_integration_test.rs
docs/: BUILD.bazel  MODULE.bazel
docs/src/: SUMMARY.md  index.md
examples/all_crate_deps/: .bazelrc  MODULE.bazel
examples/all_deps_vendor/: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bzlmod  sys_deps.bzl
examples/all_deps_vendor/basic/: BUILD.bazel
examples/android/: .bazelrc  MODULE.bazel
examples/bazel_env/: .bazelrc  Cargo.toml  MODULE.bazel
examples/bindgen_toolchain/: MODULE.bazel
examples/cargo_lints/: MODULE.bazel
examples/compile_opt/: .bazelrc
examples/crate_universe/: .bazelrc  MODULE.bazel
examples/crate_universe/cargo_workspace/: cargo-bazel-lock.json
examples/crate_universe/remove_internal_deps/: BUILD.bazel
examples/crate_universe/remove_internal_deps/num_printer/: BUILD.bazel
examples/crate_universe/remove_internal_deps/printer/: BUILD.bazel
examples/crate_universe/remove_internal_deps/rng/: BUILD.bazel
examples/crate_universe/using_cxx/include/: blobstore.h
examples/crate_universe/using_cxx/src/: blobstore.cc
examples/crate_universe/vendor_external/crates/: BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-3.1.5.bazel  BUILD.clap_derive-3.1.4.bazel  BUILD.form_urlencoded-1.0.1.bazel  BUILD.getrandom-0.2.5.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.heck-0.4.0.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.idna-0.2.3.bazel  BUILD.indexmap-1.8.0.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.119.bazel  BUILD.matches-0.1.9.bazel  BUILD.memchr-2.4.1.bazel  BUILD.os_str_bytes-6.0.0.bazel  BUILD.percent-encoding-2.1.0.bazel  BUILD.ppv-lite86-0.2.16.bazel  BUILD.proc-macro-error-1.0.4.bazel  BUILD.proc-macro-error-attr-1.0.4.bazel  BUILD.proc-macro2-1.0.36.bazel  BUILD.pulldown-cmark-0.8.0.bazel  BUILD.quote-1.0.15.bazel  BUILD.rand-0.8.5.bazel  BUILD.rand_chacha-0.3.1.bazel  BUILD.rand_core-0.6.3.bazel  BUILD.regex-1.5.4.bazel  BUILD.regex-syntax-0.6.25.bazel  BUILD.semver-1.0.6.bazel  BUILD.serde-1.0.136.bazel  BUILD.strsim-0.10.0.bazel  BUILD.syn-1.0.86.bazel  BUILD.termcolor-1.1.3.bazel  BUILD.textwrap-0.15.0.bazel  BUILD.tinyvec-1.5.1.bazel  BUILD.tinyvec_macros-0.1.0.bazel  BUILD.toml-0.5.8.bazel  BUILD.unicase-2.6.0.bazel  (+12 more)
examples/crate_universe/vendor_local_manifests/crates/: defs.bzl  (+1 more)
examples/crate_universe_local_path/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  vendor_edit_test.sh  vendor_lazy_static.sh
examples/crate_universe_local_path/crates_from_specs/: BUILD.bazel
examples/cross_compile/: MODULE.bazel  README.md
examples/ffi/: MODULE.bazel  README.md  WORKSPACE.bzlmod
examples/ios/: MODULE.bazel
examples/ios_build/: .bazelrc  MODULE.bazel
examples/musl_cross_compiling/: .bazelrc  MODULE.bazel
examples/nix_cross_compiling/: .bazelrc  MODULE.bazel
examples/override_target/: .bazelrc  MODULE.bazel
examples/proto/: .bazelrc  MODULE.bazel  README.md
examples/proto_with_toolchain/: MODULE.bazel  README.md
examples/runfiles/: MODULE.bazel
examples/runfiles/pkg_a/: BUILD.bazel
examples/runfiles/pkg_a/src/: lib.rs  main.rs  say_hello.sh  test.rs
examples/runfiles/pkg_b/: BUILD.bazel
examples/runfiles/pkg_b/src/: lib.rs  main.rs  test.rs
examples/sys/: MODULE.bazel
examples/sys/basic/: BUILD.bazel
examples/zig_cross_compiling/: .bazelrc  WORKSPACE.bazel
extensions/bindgen/: MODULE.bazel
extensions/bindgen/private/: bindgen.bzl
extensions/bindgen/test/: bindgen_test.bzl
extensions/mdbook/: .bazelrc  MODULE.bazel
extensions/prost/: MODULE.bazel
extensions/prost/private/: prost.bzl
extensions/protobuf/: MODULE.bazel  proto.bzl
extensions/pyo3/: .bazelrc  BUILD.bazel  MODULE.bazel  version.bzl
extensions/pyo3/private/: pyo3.bzl
extensions/pyo3/settings/: BUILD.bazel
extensions/wasm_bindgen/: .bazelrc  MODULE.bazel
extensions/wasm_bindgen/private/: wasm_bindgen_test.bzl
ffi/rs/allocator_library/: allocator_library.rs
rust/: known_shas.bzl  repositories.bzl  toolchain.bzl
rust/platform/: platform.bzl  triple_mappings.bzl
rust/private/: clippy.bzl  common.bzl  providers.bzl  repository_utils.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  unpretty.bzl  utils.bzl
rust/runfiles/: runfiles.rs
rust/settings/: BUILD.bazel  settings.bzl
test/cargo_build_script/build_script_env_files/: build.rs
test/cargo_build_script/cc_args_and_env/: BUILD.bazel  cc_args_and_env_test.bzl
test/cargo_build_script/tools_exec/: build.rs
test/integration/cc_common_link/: .bazelrc  MODULE.bazel
test/integration/cc_common_link_with_global_alloc/: .bazelrc  MODULE.bazel
test/integration/no_std/: .bazelrc  MODULE.bazel
test/rust_analyzer/: rust_analyzer_test_runner.sh
test/unit/cc_info/: cc_info_test.bzl
test/unit/cc_toolchain_runtime_lib/: cc_toolchain_runtime_lib_test.bzl
test/unit/clippy/: clippy_test.bzl
test/unit/collect_cfgs/: collect_cfgs_test.bzl
test/unit/consistent_crate_name/: with_modified_crate_name.bzl
test/unit/force_all_deps_direct/: generator.bzl
test/unit/pipelined_compilation/: wrap.bzl
test/unit/toolchain/: toolchain_test.bzl
tools/vscode/src/: lib.rs
util/: fetch_shas.sh  fetch_shas_NIGHTLY_ISO_DATES.txt
util/fetch_shas/: fetch_shas_NIGHTLY_ISO_DATES.txt  fetch_shas_VERSIONS.txt
(+393 files in other folders)
